--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -365,7 +365,7 @@ In agreement with our simulation results, the population test (\emph{sd}) discov
 The former discovers $1,232$ regions, while the latter only $441$, as depicted in Figure~\ref{fig:read_data}.
 We emphasize that both test statistics were compared with the same permutation scheme, and the same error controls, so that any difference in detections is due to their different power.
 
-Having established that accuracy tests are typically underpowered for signal detection compared to population tests, we wish to identify the conditions under which this will occur, and discuss implications on the practice of accuracy tests. 
+Having established that accuracy tests are typically underpowered for signal detection compared to population tests, we wish to identify the conditions under which this will occur, and discuss practical implications. 
 
 
 \begin{figure}[th]
