--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -531,6 +531,19 @@ The corresponding high dimensional accuracy tests would be a \emph{naive Bayes} 
 We conjecture that they would not alter our conclusions, since the main force driving the conservativism is discretization, which they do not solve. 
 
 
+
+\begin{figure}[ht]
+\centering
+	  \includegraphics[width=0.8\linewidth]{"art/2016-08-12 07:38:43"}
+	  \caption{\textbf{HighDim Classifier: TODO}. } %TODO: caption
+	\label{fig:golland}
+\end{figure}
+
+
+
+
+
+
 \subsection{Related Literature}
 \cite{olivetti_induction_2012} and \cite{olivetti_statistical_2014} looked into the problem of choosing a good accuracy test. 
 They propose a new test they call an \emph{independence test}, and demonstrate by simulation that it has more power than other accuracy tests, and can deal with non-balanced data sets. 
