--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -19,7 +19,7 @@
 \hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=black}
 
 
-\captionsetup[figure]{labelfont=it,textfont={it}}
+\captionsetup[figure]{labelfont=it,textfont={it},textfont=footnotesize}
 \captionsetup[subfigure]{width=0.8\hsize,labelfont=bf,textfont=footnotesize,singlelinecheck=off,justification=raggedright,format=hang}
 
 \theoremstyle{definition}
