--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -1031,4 +1031,217 @@ Results: A model-based approach is used to compare the ranking performances of r
   file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TZFB3NCW/01621459.1983.html:text/html}
 }
 
+@article{hsing_relation_????,
+  title = {Relation {{Between Permutation-Test P Values}} and {{Classifier Error Estimates}}},
+  volume = {52},
+  issn = {0885-6125, 1573-0565},
+  doi = {10.1023/A:1023985022691},
+  abstract = {Gene-expression-based classifiers suffer from the small number of microarrays usually available for classifier design. Hence, one is confronted with the dual problem of designing a classifier and estimating its error with only a small sample. Permutation testing has been recommended to assess the dependency of a designed classifier on the specific data set. This involves randomly permuting the labels of the data points, estimating the error of the designed classifiers for each permutation, and then finding the p value of the error for the actual labeling relative to the population of errors for the random labelings. This paper addresses the issue of whether or not this p value is informative. It provides both analytic and simulation results to show that the permutation p value is, up to very small deviation, a function of the error estimate. Moreover, even though the p value is a monotonically increasing function of the error estimate, in the range of the error where the majority of the p values lie, the function is very slowly increasing, so that inversion is problematic. Hence, the conclusion is that the p value is less informative than the error estimate. This result demonstrates that random labeling does not provide any further insight into the accuracy of the classifier or the precision of the error estimate. We have no knowledge beyond the error estimate itself and the various distribution-free, classifier-specific bounds developed for this estimate.},
+  language = {en},
+  timestamp = {2016-08-10T06:23:29Z},
+  number = {1-2},
+  urldate = {2016-08-10},
+  journal = {Machine Learning},
+  author = {Hsing, Tailen and Attoor, Sanju and Dougherty, Edward},
+  pages = {11--30},
+  file = {Hsing et al_Relation Between Permutation-Test P Values and Classifier Error Estimates.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/NKNDPGEF/Hsing et al_Relation Between Permutation-Test P Values and Classifier Error Estimates.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/QRWTUHZF/A1023985022691.html:text/html}
+}
+
+@article{molinaro_prediction_2005,
+  title = {Prediction error estimation: a comparison of resampling methods},
+  volume = {21},
+  issn = {1367-4803, 1460-2059},
+  shorttitle = {Prediction error estimation},
+  doi = {10.1093/bioinformatics/bti499},
+  abstract = {Motivation: In genomic studies, thousands of features are collected on relatively few samples. One of the goals of these studies is to build classifiers to predict the outcome of future observations. There are three inherent steps to this process: feature selection, model selection and prediction assessment. With a focus on prediction assessment, we compare several methods for estimating the `true' prediction error of a prediction model in the presence of feature selection.
+Results: For small studies where features are selected from thousands of candidates, the resubstitution and simple split-sample estimates are seriously biased. In these small samples, leave-one-out cross-validation (LOOCV), 10-fold cross-validation (CV) and the .632+ bootstrap have the smallest bias for diagonal discriminant analysis, nearest neighbor and classification trees. LOOCV and 10-fold CV have the smallest bias for linear discriminant analysis. Additionally, LOOCV, 5- and 10-fold CV, and the .632+ bootstrap have the lowest mean square error. The .632+ bootstrap is quite biased in small sample sizes with strong signal-to-noise ratios. Differences in performance among resampling methods are reduced as the number of specimens available increase.
+Contact: annette.molinaro@yale.edu
+Supplementary Information: A complete compilation of results and R code for simulations and analyses are available in Molinaro et al. (2005) (http://linus.nci.nih.gov/brb/TechReport.htm).},
+  language = {en},
+  timestamp = {2016-08-10T06:24:22Z},
+  number = {15},
+  urldate = {2016-08-10},
+  journal = {Bioinformatics},
+  author = {Molinaro, Annette M. and Simon, Richard and Pfeiffer, Ruth M.},
+  month = jan,
+  year = {2005},
+  pages = {3301--3307},
+  file = {Molinaro et al_2005_Prediction error estimation.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/K7KIACIA/Molinaro et al_2005_Prediction error estimation.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/B3EV448D/3301.html:text/html},
+  pmid = {15905277}
+}
+
+@article{fay_using_2007,
+  title = {On {{Using Truncated Sequential Probability Ratio Test Boundaries}} for {{Monte Carlo Implementation}} of {{Hypothesis Tests}}},
+  volume = {16},
+  issn = {1061-8600},
+  doi = {10.1198/106186007X257025},
+  abstract = {When designing programs or software for the implementation of Monte Carlo (MC) hypothesis tests, we can save computation time by using sequential stopping boundaries. Such boundaries imply stopping resampling after relatively few replications if the early replications indicate a very large or a very small p value. We study a truncated sequential probability ratio test (SPRT) boundary and provide a tractable algorithm to implement it. We review two properties desired of any MC p value, the validity of the p value and a small resampling risk, where resampling risk is the probability that the accept/reject decision will be different than the decision from complete enumeration. We show how the algorithm can be used to calculate a valid p value and confidence intervals for any truncated SPRT boundary. We show that a class of SPRT boundaries is minimax with respect to resampling risk and recommend a truncated version of boundaries in that class by comparing their resampling risk (RR) to the RR of fixed boundaries with the same maximum resample size. We study the lack of validity of some simple estimators of p values and offer a new, simple valid p value for the recommended truncated SPRT boundary. We explore the use of these methods in a practical example and provide the MChtest R package to perform the methods.},
+  timestamp = {2016-08-10T06:31:08Z},
+  number = {4},
+  urldate = {2016-08-10},
+  journal = {Journal of Computational and Graphical Statistics},
+  author = {Fay, Michael P and Kim, Hyune-Ju and Hachey, Mark},
+  month = dec,
+  year = {2007},
+  pages = {946--967},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CZB7RFFK/106186007X257025.html:text/html}
+}
+
+@article{besag_sequential_1991,
+  title = {Sequential {{Monte Carlo}} p-values},
+  volume = {78},
+  issn = {0006-3444, 1464-3510},
+  doi = {10.1093/biomet/78.2.301},
+  abstract = {The assessment of statistical significance by Monte Carlo simulation may be costly in computer time. This paper looks at a number of ways of calculating exact Monte Carlo p-values by sequential sampling. Such p-values are shown to have properties similar to those obtained by sampling with a fixed sample size. Both standard and generalized Monte Carlo procedures are discussed and, in particular, a sequential method is proposed for dealing with situations in which values can only be conveniently generated using a Markov chain, conditioned to pass through the observed data.},
+  language = {en},
+  timestamp = {2016-08-10T06:31:29Z},
+  number = {2},
+  urldate = {2016-08-10},
+  journal = {Biometrika},
+  author = {Besag, Julian and Clifford, Peter},
+  month = jan,
+  year = {1991},
+  keywords = {Markov Chain,Monte Carlo testing,p-value,Sequential estimation,Sequential test,Significance test},
+  pages = {301--304},
+  file = {Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/T9S4S4RK/301.html:text/html}
+}
+
+@article{ernst_permutation_2004,
+  title = {Permutation {{Methods}}: {{A Basis}} for {{Exact Inference}}},
+  volume = {19},
+  issn = {0883-4237, 2168-8745},
+  shorttitle = {Permutation {{Methods}}},
+  doi = {10.1214/088342304000000396},
+  abstract = {The use of permutation methods for exact inference dates back to Fisher in 1935. Since then, the practicality of such methods has increased steadily with computing power. They can now easily be employed in many situations without concern for computing difficulties. We discuss the reasoning behind these methods and describe situations when they are exact and distribution-free. We illustrate their use in several examples.},
+  timestamp = {2016-08-10T11:01:06Z},
+  number = {4},
+  urldate = {2016-08-10},
+  journal = {Statistical Science},
+  author = {Ernst, Michael D.},
+  month = nov,
+  year = {2004},
+  keywords = {Distribution-free,Monte Carlo,nonparametric,Permutation tests,Randomization tests},
+  pages = {676--685},
+  file = {Ernst_2004_Permutation Methods.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/3ZSJFBBP/Ernst_2004_Permutation Methods.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/9IP4MM9Q/1113832732.html:text/html},
+  mrnumber = {MR2185589},
+  zmnumber = {1100.62563}
+}
+
+@article{pang_shrinkage-based_2009,
+  title = {Shrinkage-based {{Diagonal Discriminant Analysis}} and {{Its Applications}} in {{High-Dimensional Data}}},
+  volume = {65},
+  issn = {1541-0420},
+  doi = {10.1111/j.1541-0420.2009.01200.x},
+  abstract = {Summary High-dimensional data such as microarrays have brought us new statistical challenges. For example, using a large number of genes to classify samples based on a small number of microarrays remains a difficult problem. Diagonal discriminant analysis, support vector machines, and\hspace{0.6em}k-nearest neighbor have been suggested as among the best methods for small sample size situations, but none was found to be superior to others. In this article, we propose an improved diagonal discriminant approach through shrinkage and regularization of the variances. The performance of our new approach along with the existing methods is studied through simulations and applications to real data. These studies show that the proposed shrinkage-based and regularization diagonal discriminant methods have lower misclassification rates than existing methods in many cases.},
+  language = {en},
+  timestamp = {2016-08-11T13:56:08Z},
+  number = {4},
+  urldate = {2016-08-11},
+  journal = {Biometrics},
+  author = {Pang, Herbert and Tong, Tiejun and Zhao, Hongyu},
+  month = dec,
+  year = {2009},
+  keywords = {discriminant analysis,Large p small n,Microarray,regularization,Shrinkage,tumor classification},
+  pages = {1021--1029},
+  file = {Pang et al_2009_Shrinkage-based Diagonal Discriminant Analysis and Its Applications in.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/GZMAEAK8/Pang et al_2009_Shrinkage-based Diagonal Discriminant Analysis and Its Applications in.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/UV9GNXG4/abstract.html:text/html}
+}
+
+@article{tong_improved_2012,
+  title = {Improved mean estimation and its application to diagonal discriminant analysis},
+  volume = {28},
+  issn = {1367-4803, 1460-2059},
+  doi = {10.1093/bioinformatics/btr690},
+  abstract = {Motivation: High-dimensional data such as microarrays have created new challenges to traditional statistical methods. One such example is on class prediction with high-dimension, low-sample size data. Due to the small sample size, the sample mean estimates are usually unreliable. As a consequence, the performance of the class prediction methods using the sample mean may also be unsatisfactory. To obtain more accurate estimation of parameters some statistical methods, such as regularizations through shrinkage, are often desired.
+Results: In this article, we investigate the family of shrinkage estimators for the mean value under the quadratic loss function. The optimal shrinkage parameter is proposed under the scenario when the sample size is fixed and the dimension is large. We then construct a shrinkage-based diagonal discriminant rule by replacing the sample mean by the proposed shrinkage mean. Finally, we demonstrate via simulation studies and real data analysis that the proposed shrinkage-based rule outperforms its original competitor in a wide range of settings.
+Contact: tongt@hkbu.edu.hk},
+  language = {en},
+  timestamp = {2016-08-11T13:56:14Z},
+  number = {4},
+  urldate = {2016-08-11},
+  journal = {Bioinformatics},
+  author = {Tong, Tiejun and Chen, Liang and Zhao, Hongyu},
+  month = feb,
+  year = {2012},
+  pages = {531--537},
+  file = {Tong et al_2012_Improved mean estimation and its application to diagonal discriminant analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/7KAVXN3A/Tong et al_2012_Improved mean estimation and its application to diagonal discriminant analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SCC5VK57/531.html:text/html},
+  pmid = {22171335}
+}
+
+@article{srivastava_comparison_2007,
+  title = {Comparison of {{Discrimination Methods}} for {{High Dimensional Data}}},
+  volume = {37},
+  doi = {10.14490/jjss.37.123},
+  timestamp = {2016-08-11T13:56:43Z},
+  number = {1},
+  journal = {Journal of the Japan Statistical Society},
+  author = {Srivastava, Muni S. and Kubokawa, Tatsuya},
+  year = {2007},
+  keywords = {classification,discrimination analysis,minimum distance,Moore-Penrose inverse},
+  pages = {123--134},
+  file = {Srivastava_Kubokawa_2007_Comparison of Discrimination Methods for High Dimensional Data.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/TFXE8IQS/Srivastava_Kubokawa_2007_Comparison of Discrimination Methods for High Dimensional Data.pdf:application/pdf}
+}
+
+@article{dudoit_comparison_2002,
+  title = {Comparison of {{Discrimination Methods}} for the {{Classification}} of {{Tumors Using Gene Expression Data}}},
+  volume = {97},
+  issn = {0162-1459},
+  doi = {10.1198/016214502753479248},
+  abstract = {A reliable and precise classification of tumors is essential for successful diagnosis and treatment of cancer. cDNA microarrays and high-density oligonucleotide chips are novel biotechnologies increasingly used in cancer research. By allowing the monitoring of expression levels in cells for thousands of genes simultaneously, microarray experiments may lead to a more complete understanding of the molecular variations among tumors and hence to a finer and more informative classification. The ability to successfully distinguish between tumor classes (already known or yet to be discovered) using gene expression data is an important aspect of this novel approach to cancer classification. This article compares the performance of different discrimination methods for the classification of tumors based on gene expression data. The methods include nearest-neighbor classifiers, linear discriminant analysis, and classification trees. Recent machine learning approaches, such as bagging and boosting, are also considered. The discrimination methods are applied to datasets from three recently published cancer gene expression studies.},
+  timestamp = {2016-08-11T13:56:58Z},
+  number = {457},
+  urldate = {2016-08-11},
+  journal = {Journal of the American Statistical Association},
+  author = {Dudoit, Sandrine and Fridlyand, Jane and Speed, Terence P.},
+  month = mar,
+  year = {2002},
+  pages = {77--87},
+  file = {Dudoit et al_2002_Comparison of Discrimination Methods for the Classification of Tumors Using.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/7E4I6QI6/Dudoit et al_2002_Comparison of Discrimination Methods for the Classification of Tumors Using.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/CUDUDMF8/016214502753479248.html:text/html}
+}
+
+@article{ramey_comparison_2013,
+  title = {A comparison of regularization methods applied to the linear discriminant function with high-dimensional microarray data},
+  volume = {83},
+  issn = {0094-9655},
+  doi = {10.1080/00949655.2011.625946},
+  abstract = {Classification of gene expression microarray data is important in the diagnosis of diseases such as cancer, but often the analysis of microarray data presents difficult challenges because the gene expression dimension is typically much larger than the sample size. Consequently, classification methods for microarray data often rely on regularization techniques to stabilize the classifier for improved classification performance. In particular, numerous regularization techniques, such as covariance-matrix regularization, are available, which, in practice, lead to a difficult choice of regularization methods. In this paper, we compare the classification performance of five covariance-matrix regularization methods applied to the linear discriminant function using two simulated high-dimensional data sets and five well-known, high-dimensional microarray data sets. In our simulation study, we found the minimum distance empirical Bayes method reported in Srivastava and Kubokawa [Comparison of discrimination methods for high dimensional data, J. Japan Statist. Soc. 37(1) (2007), pp. 123\textendash{}134], and the new linear discriminant analysis reported in Thomaz, Kitani, and Gillies [A Maximum Uncertainty LDA-based approach for Limited Sample Size problems \textendash{} with application to Face Recognition, J. Braz. Comput. Soc. 12(1) (2006), pp. 1\textendash{}12], to perform consistently well and often outperform three other prominent regularization methods. Finally, we conclude with some recommendations for practitioners.},
+  timestamp = {2016-08-11T13:59:03Z},
+  number = {3},
+  urldate = {2016-08-11},
+  journal = {Journal of Statistical Computation and Simulation},
+  author = {Ramey, John A. and Young, Phil D.},
+  month = mar,
+  year = {2013},
+  pages = {581--596},
+  file = {Ramey_Young_2013_A comparison of regularization methods applied to the linear discriminant.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/AFPUWMFX/Ramey_Young_2013_A comparison of regularization methods applied to the linear discriminant.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/9Q66C8BX/00949655.2011.html:text/html}
+}
+
+@article{ramey_high-dimensional_2016,
+  title = {High-{{Dimensional Regularized Discriminant Analysis}}},
+  timestamp = {2016-08-11T14:04:27Z},
+  urldate = {2016-08-11},
+  journal = {arXiv preprint arXiv:1602.01182},
+  author = {Ramey, John A. and Stein, Caleb K. and Young, Phil D. and Young, Dean M.},
+  year = {2016},
+  file = {Ramey et al_2016_High-Dimensional Regularized Discriminant Analysis.pdf:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/SU2GI5X7/Ramey et al_2016_High-Dimensional Regularized Discriminant Analysis.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/vs27un40.default/zotero/storage/IQZ62PZC/1602.html:text/html}
+}
+
+@article{friedman_regularization_2010,
+  title = {Regularization {{Paths}} for {{Generalized Linear Models}} via {{Coordinate Descent}}},
+  volume = {33},
+  timestamp = {2016-08-12T05:42:16Z},
+  number = {1},
+  journal = {Journal of Statistical Software},
+  author = {Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+  year = {2010},
+  pages = {1--22}
+}
+
+@book{ramey_sparsediscrim:_2016,
+  title = {sparsediscrim: {{Sparse}} and {{Regularized Discriminant Analysis}}},
+  timestamp = {2016-08-12T05:43:07Z},
+  author = {Ramey, John A.},
+  year = {2016},
+  note = {R package version 0.2.3}
+}
+
 
