--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -447,8 +447,7 @@ On the other hand, based on our reported neuroimaging example, and others, we fi
 
 
 \subsection{A good accuracy test}
-In Section~\ref{sec:reservations} we discuss cases where an accuracy test cannot replace a population test.
-For such cases we collect some conclusions from our simulations on the best practices for accuracy tests.
+For the cases a population test cannot replace an accuracy test, we collect some conclusions and best practices from our simulations.
 \begin{enumerate}
 \item The conservativeness of accuracy tests decrease with sample size. 
 
